--- a/index.html
+++ b/index.html
@@ -3,23 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bizness - AI-Powered MSME Management Platform</title>
-    <meta name="description" content="The all-in-one platform for MSMEs to manage inventory, calculate costs, and scale with AI-driven insights. Grow your business with intelligent automation." />
-    <meta name="author" content="Bizness" />
-    <meta name="keywords" content="MSME, UMKM, business management, inventory, HPP calculator, AI tools, analytics" />
-
-    <meta property="og:title" content="Bizness - AI-Powered MSME Management Platform" />
-    <meta property="og:description" content="The all-in-one platform for MSMEs to manage inventory, calculate costs, and scale with AI-driven insights." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Bizness - AI-Powered MSME Management Platform" />
-    <meta name="twitter:description" content="The all-in-one platform for MSMEs to manage inventory, calculate costs, and scale with AI-driven insights." />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
-    <link rel="canonical" href="https://bizness.app" />
-  </head>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <title>Bizness - AI-Powered MSME Management Platform</title>
+    </head>
 
   <body>
     <div id="root"></div>
